# video_convertor_multiformat

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  run_cli_example.sh
.github/: FUNDING.yml
src/video_convertor_multiformat/: __init__.py  cli.py  converter.py  ffmpeg_manager.py  logging_setup.py  models.py  reporting.py  ui_tkinter.py
src/video_to_mp4_converter/: __init__.py  cli.py  logging_setup.py
tests/: test_destination.py  test_ui_summary.py
