[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-media-converter"
version = "0.2.0"
description = "Cross-platform batch media converter with multi-format output, CLI, Tkinter UI, logs, and reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Rakshitha Rodrigo" }]
dependencies = [
  "imageio-ffmpeg>=0.5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
media-convert = "video_to_mp4_converter.cli:main"
media-convert-ui = "video_to_mp4_converter.ui_tkinter:main"
video2mp4 = "video_to_mp4_converter.cli:main"
video2mp4-ui = "video_to_mp4_converter.ui_tkinter:main"

[tool.setuptools.packages.find]
where = ["src"]
