[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-convertor-multiformat"
version = "1.1.0"
description = "Cross-platform batch media converter with multi-format output, CLI, Tkinter UI, logs, and reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Frost Forge Labs Inc.", email = "contact@frostforgelabs.ca" },
  { name = "Rakshitha Rodrigo" },
]
dependencies = [
  "imageio-ffmpeg>=0.5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
media-convert = "video_convertor_multiformat.cli:main"
media-convert-ui = "video_convertor_multiformat.ui_tkinter:main"
video2mp4 = "video_convertor_multiformat.cli:main"
video2mp4-ui = "video_convertor_multiformat.ui_tkinter:main"

[tool.setuptools.packages.find]
where = ["src"]
